--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,14 +36,19 @@ dist.jlink.output=${dist.jlink.dir}/NewEnglandInsurance
 endorsed.classpath=
 excludes=
 file.reference.activation.jar=../../../Downloads/jaf-1.1.1/activation.jar
+file.reference.activation.jar-1=../../Downloads/jaf-1.1.1/activation.jar
 file.reference.mail.jar=../../../Downloads/javamail-1.4.4/mail.jar
-file.reference.mysql-connector-j-9.1.0.jar=/Users/kishorebalaji/Downloads/mysql-connector-j-9.1.0/mysql-connector-j-9.1.0.jar
+file.reference.mail.jar-1=../../Downloads/javamail-1.4.4/mail.jar
+file.reference.mysql-connector-j-9.1.0.jar=../../Downloads/mysql-connector-j-9.1.0/mysql-connector-j-9.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.1.0.jar}:\
     ${file.reference.mail.jar}:\
-    ${file.reference.activation.jar}
+    ${file.reference.activation.jar}:\
+    ${file.reference.activation.jar-1}:\
+    ${file.reference.mysql-connector-j-9.1.0.jar}:\
+    ${file.reference.mail.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
