--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=NewEnglandInsurance
+application.title=InsuranceManagement
 application.vendor=prane
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/NewEnglandInsurance.jar
+dist.jar=${dist.dir}/InsuranceManagement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/NewEnglandInsurance
+dist.jlink.output=${dist.jlink.dir}/InsuranceManagement
 endorsed.classpath=
 excludes=
 file.reference.activation.jar=../../../Downloads/jaf-1.1.1/activation.jar
@@ -83,7 +83,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=NewEnglandInsurance
+jlink.launcher.name=InsuranceManagement
 main.class=Main.MainJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
